# Kaggle-Pipeline

./: .gitignore  Kaggle_Pipeline.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: playground-s6e4.yaml
docs/: gpu-pipeline.md
notebooks/: kaggle_runner.ipynb  pipeline_multi_thread_blend.ipynb  pipeline_multi_thread_train.ipynb  pipeline_single_thread.ipynb
scripts/: publish_dataset.py
src/kaggle_pipeline/: __init__.py  analysis.py  cli.py  logconfig.py  pipeline.py
src/kaggle_pipeline/config/: __init__.py  config.py  environment.py  loader.py
src/kaggle_pipeline/context/: __init__.py  context.py
src/kaggle_pipeline/data/: __init__.py  autodetect.py  loader.py
src/kaggle_pipeline/eda/: __init__.py  association.py  plots.py  reports.py
src/kaggle_pipeline/evolution/: __init__.py  logging_utils.py  pipeline.py  pipeline_log.py  prepare.py  runtime.py  runtime_estimator.py  scheduler.py  state_io.py  submission.py
src/kaggle_pipeline/evolution/config/: __init__.py  pipeline_settings.py  settings.py
src/kaggle_pipeline/evolution/controllers/: __init__.py  credit_assignment.py  evolution_controller.py  feature_controller.py  model_controller.py  promotion_controller.py
src/kaggle_pipeline/evolution/ecosystem/: __init__.py  compute_waste.py  merge.py  resume.py  serialization.py  state.py  summary.py
src/kaggle_pipeline/models/: __init__.py  base.py  registry.py
src/kaggle_pipeline/preprocessing/: __init__.py  association.py  columns.py  encoders.py  pipeline.py  selection.py  target.py  transformers.py
src/kaggle_pipeline/scoring/: __init__.py  metrics.py
src/kaggle_pipeline/search/: __init__.py  cv.py  decorrelation.py  judge.py  leaderboard.py
src/kaggle_pipeline/submission/: __init__.py  writer.py
src/kaggle_pipeline/training/: __init__.py  trainer.py
tests/: conftest.py  test_autodetect.py  test_cli.py  test_decorrelation.py  test_eda.py  test_encoders.py  test_judge_decorrelation.py  test_leaderboard.py  test_model_io.py  test_preprocessing.py  test_regression_unsupported.py  test_reproducibility.py  test_selection.py  test_smoke_pipeline.py  test_submission.py  test_target_transforms.py  test_trainer.py  test_verbosity.py  test_warm_start.py
tests/evolution/: conftest.py  test_correlation_helpers.py  test_correlation_penalty.py  test_evolution_smoke.py  test_feature_genome.py  test_feature_scoring.py  test_guards.py  test_logging_utils.py  test_model_genome.py  test_model_mutation.py  test_model_utility.py  test_new_families.py  test_oof_correlation_cache.py  test_pipeline.py  test_pipeline_log.py  test_resume.py  test_runtime.py  test_runtime_estimator.py  test_state_io.py  test_summary_format.py  test_training.py
tests/evolution/ecosystem/: test_compute_waste.py  test_merge.py
tests/evolution/ensemble/: test_ensemble.py  test_ensemble_family_floor.py  test_ensemble_parallel_refit.py
tests/evolution/features/: test_deletion_policy.py  test_feature_registry.py  test_feature_scoring.py
tests/evolution/models/: test_family_floor.py  test_model_genome.py  test_new_families.py  test_population_elite_sticky.py  test_train_size_cap.py
tests/evolution/pipeline/: test_parallel_modes.py  test_prepare.py  test_submission.py
tests/evolution/runtime/: test_runtime.py
tests/evolution/state/: test_hashing.py  test_resume.py  test_state_helpers.py
(+57 files in other folders)
