[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-pipeline"
version = "0.1.0"
description = "A config-driven AutoML pipeline for tabular Kaggle competitions: preprocessing, an adaptive randomized model search with a leaderboard, and stacked ensembling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HkHk2Prod" }]
keywords = ["kaggle", "automl", "tabular", "ensembling", "scikit-learn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn>=1.4",
    "joblib",
    "pyyaml",
    "matplotlib",
    "seaborn",
    "lightgbm",
    "catboost",
    "xgboost",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/HkHk2Prod/Kaggle-Pipeline"
Repository = "https://github.com/HkHk2Prod/Kaggle-Pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so downstream users get the package's type hints.
kaggle_pipeline = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
files = ["src"]
# The scientific stack (numpy/pandas/sklearn/boosters) ships partial or no stubs;
# don't fail on their missing types -- we type-check our own code, not theirs.
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
